Look over new comment partial.

--- a/app/views/burns/_new_comment.erb
+++ b/app/views/burns/_new_comment.erb
@@ -10,7 +10,7 @@
   <% if current_user %>
     <input type="submit" value="Submit New Comment" class="button">
   <% else %>
-    <p>You must be logged in to create a new comment.</p>
+    <p>You must be logged in before you can create a new comment.</p>
   <% end %>
 </form>
 
